streaming/radarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: streaming
spec:
  selector:
    app: radarr
  ports:
    - port: 80
      targetPort: 7878
